--- a/app/src/main/res/layout/item_container_tv_show.xml
+++ b/app/src/main/res/layout/item_container_tv_show.xml
@@ -34,8 +34,8 @@
             android:layout_width="@dimen/_70sdp"
             android:layout_height="@dimen/_100sdp"
             android:layout_marginStart="@dimen/_10sdp"
-            android:scaleType="centerCrop"
             android:imageURL="@{tvShow.thumbnail}"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:riv_corner_radius="@dimen/_4sdp" />
@@ -63,9 +63,9 @@
             android:layout_marginTop="@dimen/_3sdp"
             android:fontFamily="@font/ubuntu_regular"
             android:includeFontPadding="false"
+            android:text='@{tvShow.network + " (" +tvShow.country +" )"}'
             android:textColor="@color/colorTextOther"
             android:textSize="@dimen/_12ssp"
-            android:text='@{tvShow.network + " (" +tvShow.country +" )"}'
             app:layout_constraintEnd_toEndOf="@id/textName"
             app:layout_constraintStart_toStartOf="@id/textName"
             app:layout_constraintTop_toBottomOf="@id/textName" />
@@ -77,9 +77,9 @@
             android:layout_marginTop="@dimen/_3sdp"
             android:fontFamily="@font/ubuntu_regular"
             android:includeFontPadding="false"
+            android:text='@{"Started on: " + tvShow.startDate}'
             android:textColor="@color/colorTextSecondary"
             android:textSize="@dimen/_12ssp"
-            android:text='@{"Started on: " + tvShow.startDate}'
             app:layout_constraintEnd_toEndOf="@id/textName"
             app:layout_constraintStart_toStartOf="@id/textName"
             app:layout_constraintTop_toBottomOf="@id/textNetwork" />
@@ -97,6 +97,19 @@
             app:layout_constraintEnd_toEndOf="@id/textName"
             app:layout_constraintStart_toStartOf="@id/textName"
             app:layout_constraintTop_toBottomOf="@id/textStarted" />
+
+        <ImageView
+            android:id="@+id/imageDelete"
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_22sdp"
+            android:layout_marginEnd="@dimen/_4sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_delete"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="@android:color/holo_red_light" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
